# glob_challenge

./: .gitignore  Dockerfile.back  Makefile  README.md  pyproject.toml
a_design/: glob_challenge.mwb  glob_challenge.mwb.bak
app/: main.py
app/common/: utils.py  variables.py
app/database/: bigquery_glob.py  database.py
app/database/query/: hires_by_dpt.sql  hires_by_q.sql  insert_table.sql  select_all.sql
app/filesystem/: gcs_glob.py
